--- a/Views/Alumnos/Facturacion.cshtml
+++ b/Views/Alumnos/Facturacion.cshtml
@@ -36,7 +36,7 @@
             </div>
 
             <h3 class="mt-4">Turnos Pendientes de Pago</h3>
-            <form id="facturacionForm" method="post" action="@Url.Action("GenerarFactura", "Facturacion")">
+            <form id="facturacionForm" method="post" action="@Url.Action("GenerarFacturaView", "Facturacion")">
                 <table id="turnosTable" class="table table-hover table-striped">
                     <thead class="thead-dark">
                         <tr>
