--- a/Views/Alumnos/Create.cshtml
+++ b/Views/Alumnos/Create.cshtml
@@ -34,7 +34,7 @@
                         </div>
 
                         <div class="form-group mb-3">
-                            <label for="DNI" class="form-label">DNI</label>
+                            <label for="DNI" class="form-label">Dni</label>
                             @Html.EditorFor(model => model.DNI, new { htmlAttributes = new { @class = "form-control" } })
                             <span class="text-danger">@Html.ValidationMessageFor(model => model.DNI)</span>
                         </div>
@@ -43,6 +43,20 @@
                             <label for="Domicilio" class="form-label">Domicilio</label>
                             @Html.EditorFor(model => model.Domicilio, new { htmlAttributes = new { @class = "form-control" } })
                             <span class="text-danger">@Html.ValidationMessageFor(model => model.Domicilio)</span>
+                        </div>
+
+
+                        <div class="form-group mb-3">
+                            <label for="Domicilio" class="form-label">Ciudad</label>
+                            @Html.EditorFor(model => model.Ciudad, new { htmlAttributes = new { @class = "form-control" } })
+                            <span class="text-danger">@Html.ValidationMessageFor(model => model.Ciudad)</span>
+                        </div>
+
+
+                        <div class="form-group mb-3">
+                            <label for="Domicilio" class="form-label">Teléfono</label>
+                            @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
+                            <span class="text-danger">@Html.ValidationMessageFor(model => model.Telefono)</span>
                         </div>
 
                         <div class="text-center">
