--- a/Views/Alumnos/Edit.cshtml
+++ b/Views/Alumnos/Edit.cshtml
@@ -47,6 +47,18 @@
                             <span class="text-danger">@Html.ValidationMessageFor(model => model.Domicilio)</span>
                         </div>
 
+                        <div class="form-group mb-3">
+                            <label for="Domicilio" class="form-label">Ciudad</label>
+                            @Html.EditorFor(model => model.Ciudad, new { htmlAttributes = new { @class = "form-control" } })
+                            <span class="text-danger">@Html.ValidationMessageFor(model => model.Ciudad)</span>
+                        </div>
+
+                        <div class="form-group mb-3">
+                            <label for="Domicilio" class="form-label">Telefono</label>
+                            @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
+                            <span class="text-danger">@Html.ValidationMessageFor(model => model.Telefono)</span>
+                        </div>
+
                         <div class="text-center">
                             <button type="submit" class="btn btn-success me-2"><i class="fa fa-save"></i> Guardar</button>
                             <a href="#" class="btn btn-primary" data-bs-dismiss="modal"><i class="fa fa-ban"></i> Cancelar</a>
