--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,6 +40,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Alumnos"
                                 asp-action="Index">Alumnos</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Estadisticas"
+                                asp-action="Index">Estadisticas</a>
+                        </li>
                       
                     </ul>
                 </div>
