--- a/Views/Alumnos/Create.cshtml
+++ b/Views/Alumnos/Create.cshtml
@@ -23,44 +23,44 @@
                         
                         <div class="form-group mb-3">
                             <label for="Nombre" class="form-label">Nombre</label>
-                            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control", @id = "Nombre" } })
                             <span class="text-danger">@Html.ValidationMessageFor(model => model.Nombre)</span>
                         </div>
 
                         <div class="form-group mb-3">
                             <label for="Apellido" class="form-label">Apellido</label>
-                            @Html.EditorFor(model => model.Apellido, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.Apellido, new { htmlAttributes = new { @class = "form-control", @id = "Apellido" } })
                             <span class="text-danger">@Html.ValidationMessageFor(model => model.Apellido)</span>
                         </div>
 
                         <div class="form-group mb-3">
                             <label for="DNI" class="form-label">Dni</label>
-                            @Html.EditorFor(model => model.DNI, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.DNI, new { htmlAttributes = new { @class = "form-control", @id = "DNI" } })
                             <span class="text-danger">@Html.ValidationMessageFor(model => model.DNI)</span>
                         </div>
 
                         <div class="form-group mb-3">
                             <label for="Domicilio" class="form-label">Domicilio</label>
-                            @Html.EditorFor(model => model.Domicilio, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.Domicilio, new { htmlAttributes = new { @class = "form-control", @id = "Domicilio" } })
                             <span class="text-danger">@Html.ValidationMessageFor(model => model.Domicilio)</span>
                         </div>
 
 
                         <div class="form-group mb-3">
-                            <label for="Domicilio" class="form-label">Ciudad</label>
-                            @Html.EditorFor(model => model.Ciudad, new { htmlAttributes = new { @class = "form-control" } })
+                            <label for="Ciudad" class="form-label">Ciudad</label>
+                            @Html.EditorFor(model => model.Ciudad, new { htmlAttributes = new { @class = "form-control", @id = "Ciudad" } })
                             <span class="text-danger">@Html.ValidationMessageFor(model => model.Ciudad)</span>
                         </div>
 
 
                         <div class="form-group mb-3">
-                            <label for="Domicilio" class="form-label">Teléfono</label>
-                            @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
+                            <label for="Telefono" class="form-label">Teléfono</label>
+                            @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control", @id = "Telefono" } })
                             <span class="text-danger">@Html.ValidationMessageFor(model => model.Telefono)</span>
                         </div>
 
                         <div class="text-center">
-                            <button type="submit" class="btn btn-success me-2"><i class="fa fa-save"></i> Guardar</button>
+                            <button type="submit" class="btn btn-success me-2" id="submitBtn"><i class="fa fa-save"></i> Guardar</button>
                             <button type="button" class="btn btn-primary" data-bs-dismiss="modal"><i class="fa fa-ban"></i> Cancelar</button>
                         </div>
                     }
@@ -69,3 +69,24 @@
         </div>
     </div>
 </div>
+
+<script>
+    document.getElementById("submitBtn").addEventListener("click", function(event) {
+        var valid = true;
+        var inputs = ["Nombre", "Apellido", "DNI", "Domicilio", "Ciudad", "Telefono"];
+
+        inputs.forEach(function(input) {
+            var element = document.getElementById(input);
+            if (!element.value) {
+                valid = false;
+                element.classList.add("is-invalid");
+            } else {
+                element.classList.remove("is-invalid");
+            }
+        });
+
+        if (!valid) {
+            event.preventDefault();
+        }
+    });
+</script>
