--- a/Views/Turnos/Edit.cshtml
+++ b/Views/Turnos/Edit.cshtml
@@ -12,13 +12,13 @@
                     <h5>Editar turno</h5>
                 </div>
                 <div class="card-body">
-                    <form asp-action="Edit" method="post">
+                    <form asp-action="Edit" method="post" id="turnoEditForm">
                         <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
                         <input type="hidden" asp-for="Id" />
 
-                       <div class="form-group mb-3">
+                        <div class="form-group mb-3">
                             <label for="AlumnoId" class="form-label">Alumno</label>
-                            <select asp-for="AlumnoId" class="form-select" asp-items="ViewBag.Alumnos">
+                            <select asp-for="AlumnoId" class="form-select" asp-items="ViewBag.Alumnos" id="AlumnoId">
                                 <option value="">Seleccione un alumno</option>
                             </select>
                             <span asp-validation-for="AlumnoId" class="text-danger"></span>
@@ -26,30 +26,30 @@
 
                         <div class="form-group mb-3">
                             <label for="Fecha" class="form-label">Fecha</label>
-                            <input asp-for="Fecha" class="form-control" placeholder="Fecha" />
+                            <input asp-for="Fecha" class="form-control" id="Fecha" placeholder="Fecha" />
                             <span asp-validation-for="Fecha" class="text-danger"></span>
                         </div>
 
                         <div class="form-group mb-3">
                             <label for="Horas" class="form-label">Horas</label>
-                            <input asp-for="Horas" class="form-control" />
+                            <input asp-for="Horas" class="form-control" id="Horas" />
                             <span asp-validation-for="Horas" class="text-danger"></span>
                         </div>
 
                         <div class="form-group mb-3">
                             <label for="PrecioHora" class="form-label">Precio por Hora</label>
-                            <input asp-for="PrecioHora" class="form-control" placeholder="$ 00,00" />
+                            <input asp-for="PrecioHora" class="form-control" id="PrecioHora" placeholder="$ 00,00" />
                             <span asp-validation-for="PrecioHora" class="text-danger"></span>
                         </div>
 
                         <div class="form-group mb-3">
                             <label for="Asignatura" class="form-label">Asignatura</label>
-                            <input asp-for="Asignatura" class="form-control" />
+                            <input asp-for="Asignatura" class="form-control" id="Asignatura" />
                             <span asp-validation-for="Asignatura" class="text-danger"></span>
                         </div>
 
                         <div class="text-center">
-                            <button type="submit" class="btn btn-success me-2"><i class="fa fa-save"></i> Guardar</button>
+                            <button type="submit" class="btn btn-success me-2" id="submitBtn"><i class="fa fa-save"></i> Guardar</button>
                             <a href="#" class="btn btn-primary" data-bs-dismiss="modal"><i class="fa fa-ban"></i> Cancelar</a>
                         </div>
                     </form>
@@ -58,3 +58,25 @@
         </div>
     </div>
 </div>
+
+<script>
+    document.getElementById("submitBtn").addEventListener("click", function(event) {
+        var valid = true;
+        var inputs = ["AlumnoId", "Fecha", "Horas", "PrecioHora", "Asignatura"];
+
+        inputs.forEach(function(input) {
+            var element = document.getElementById(input);
+            if (!element.value || (element.tagName === "SELECT" && element.value === "")) {
+                valid = false;
+                element.classList.add("is-invalid");
+            } else {
+                element.classList.remove("is-invalid");
+            }
+        });
+
+        if (!valid) {
+            event.preventDefault();
+          
+        }
+    });
+</script>
